# reachability-map

./: .gitignore  README.md  pyproject.toml  run.sh  ur10.urdf  visualize.py
assets/: quick.h5
examples/: compute_panda.sh
js/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
js/src/web/: App.tsx
js/src/web/components/: ClipPlaneWidget.tsx  ReachabilityVoxels.tsx  RobotModel.tsx  Viewport.tsx
js/src/web/hooks/: useHdf5.ts
js/src/web/lib/: colormaps.ts  hdf5Reader.ts
reachability_map/: bounds_finder.py  cli.py  config.py  curobo_solver.py  hdf5_io.py  ik_solver.py  orientation_sampler.py  reachability.py  robot_loader.py  voxel_grid.py  worker.py
